--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
@@ -68,7 +68,7 @@ $(function(){
 			{data: "ARREAR", title: "[[#{HQP_L_BALANCE}]]", className: "right"}
 		],
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/accounts/ap/list/data",
+			url: "[[${BASE_PATH}]]/accounts/ap/list/data",
 			data: function(p)
 			{
 			},
