--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/ship_to_party.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/ship_to_party.html
@@ -69,7 +69,7 @@ $(function(){
 			{data: "VTEXT", title: "[[#{HQP_L_TRANSPORTATION_ZONE}]]"}//Transportation Zone
 		],
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/order/create/ship_to_party/data",
+			url: "[[${BASE_PATH}]]/order/create/ship_to_party/data",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
