--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/shipping_info.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/shipping_info.html
@@ -40,7 +40,7 @@ $(function(){
 			{data: "INCO2", title: "[[#{HQP_L_INCOTERMS2}]]"}
 		],
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/order/create/shipping_info/data",
+			url: "[[${BASE_PATH}]]/order/create/shipping_info/data",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
