--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -87,7 +87,7 @@ function clickUserInfo()
 
 function clickDealerInfo()
 {
-	Popup.open("/portal/scm/parts/common/info/dealer/detail", 1024, 700);
+	Popup.open("[[${BASE_PATH}]]/dealer_info/view", 1100, 800);
 };
 
 function clickLogout()
@@ -95,4 +95,3 @@ function clickLogout()
 	$("#FORM_logout").submit();
 };
 </script>
-<!-- header.jsp end -->
