--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
@@ -60,7 +60,7 @@
 let $tableObj;
 
 JpUtilsAjax.get({
-	url: "/portal/iv/hq/parts/domestic/claim/view/data",
+	url: "[[${BASE_PATH}]]/claim/view/data",
 	data: {"pOrderNo": "[[${orderNo}]]", "pDocType": "[[${docType}]]"},		
     success: function(data, textStatus, jqXHR) 
     {
@@ -186,7 +186,7 @@ JpUtilsAjax.get({
 					$("#orderNo").val(rowData.REF_ORD);		
 					$("#intNo").val(rowData.INT_NO);
 					$("#docuItem").val(rowData.DOCU_ITEM);										
-					$("#FORM_download").attr("action", "/portal/iv/hq/parts/domestic/claim/download/attachment").submit();
+					$("#FORM_download").attr("action", "[[${BASE_PATH}]]/claim/download/attachment").submit();
 				}
 			}
 		}).mouseout(function(){
@@ -196,11 +196,11 @@ JpUtilsAjax.get({
 });
 
 $("#BTN_print").on("click", function() {
-	document.location.href = "/portal/iv/hq/parts/domestic/claim/download/doc?orderNo=[[${orderNo}]]&docType=[[${docType}]]";
+	document.location.href = "[[${BASE_PATH}]]/claim/download/doc?orderNo=[[${orderNo}]]&docType=[[${docType}]]";
 });
 
 $("#BTN_back").on("click", function() {
-	$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/claim/list").submit();
+	$("#FORM_search").attr("action", "[[${BASE_PATH}]]/claim/list").submit();
 });
 
 </script>	
