--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -111,7 +111,7 @@ $(function(){
 		],
 		*/
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/order/display/order/list/data",
+			url: "[[${BASE_PATH}]]/order/display/order/list/data",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
@@ -159,7 +159,7 @@ $(function(){
 			docName = "quot";
 		}
 		
-		document.location.href = "/portal/iv/hq/parts/domestic/order/display/" + docName + "/list?pDocType=" + $(this).val();
+		document.location.href = "[[${BASE_PATH}]]/order/display/" + docName + "/list?pDocType=" + $(this).val();
 	});
 	
 	$("#BTN_search").on("click", function() {
@@ -185,7 +185,7 @@ $(function(){
 		if (JpUtilsString.isNotEmpty(orderNo))
 		{
 			$("#orderNo").val(orderNo);
-			$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/order/display/order/view").submit();
+			$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/order/view").submit();
 		};
 	});
 });
