--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view.html
@@ -4,5 +4,5 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 <th:block layout:fragment="content">
-	<th:block th:replace="/portal/iv/hq/parts/domestic/order/display/order/view_inc"></th:block>
+	<th:block th:replace="|${BASE_PATH}/order/display/order/view_inc|"></th:block>
 </th:block>
