--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
@@ -107,7 +107,7 @@ if (opener)
 
 $(function(){
 	JpUtilsAjax.get({
-		url: "/portal/iv/hq/parts/domestic/order/display/order/view/data",		
+		url: "[[${BASE_PATH}]]/order/display/order/view/data",		
 		data: {"orderNo": "[[${orderNo}]]"},
 	    success: function(response, textStatus, jqXHR) 
 	    {
@@ -179,11 +179,11 @@ $(function(){
 });
 
 $("#BTN_pdfDownload").on("click", function() {
-	document.location.href = "/portal/iv/hq/parts/domestic/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=Y006";
+	document.location.href = "[[${BASE_PATH}]]/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=Y006";
 });
 
 $("#BTN_back").on("click", function() {
-	$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/order/display/order/list").submit();
+	$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/order/list").submit();
 });
 
 $("#BTN_download").on("click", function() {
