--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
@@ -130,7 +130,7 @@ $(function(){
 		],
 		*/
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/order/display/quot/list/data",
+			url: "[[${BASE_PATH}]]/order/display/quot/list/data",
 			data: function(p)
 			{
 				// ajax로 넘길 파라미터
@@ -188,7 +188,7 @@ $(function(){
 			docName = "quotation";
 		}
 		
-		document.location.href = "/portal/iv/hq/parts/domestic/order/display/" + docName + "/list?pDocType=" + $(this).val();
+		document.location.href = "[[${BASE_PATH}]]/order/display/" + docName + "/list?pDocType=" + $(this).val();
 	});
 	
 	$("#BTN_search").on("click", function() {
@@ -214,13 +214,13 @@ $(function(){
 		$("#orderNo").val(data.VBELN);
 		$("#status").val(data.RFGSK);
 		
-		$("#FORM_search").attr("action", "/portal/iv/hq/parts/domestic/order/display/quot/view").submit();
+		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/order/display/quot/view").submit();
 	});
 	
 	$("#TBL_grid tbody").on("click", "td:nth-child(3)", function () {
 		let orderNo = $tableObj.row($(this)).data().VBELN2;
 		
-		Popup.open("/portal/iv/hq/parts/domestic/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
+		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
 	});		
 });
 </script>	
