--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
@@ -108,7 +108,7 @@ $(function(){
 			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"}
 		],
 		ajax: {
-			url: "/portal/iv/hq/parts/domestic/order/status/list/data",
+			url: "[[${BASE_PATH}]]/order/status/list/data",
 			data: function(p)
 			{
 				p.pDocType = $("#FORM_search input:radio[name=pDocType]:checked").val();
@@ -152,7 +152,7 @@ $(function(){
 		
 		$("#FORM_search").attr({
 			"target": "_self",
-			"action": "/portal/iv/hq/parts/domestic/order/status/view"
+			"action": "[[${BASE_PATH}]]/order/status/view"
 		}).submit();
 	});	
 });
@@ -192,7 +192,7 @@ $("#BTN_totalDownload").on("click", function(){
 	
 	$("#FORM_search").attr({
 		"target": "IFM_download",
-		"action": "/portal/iv/hq/parts/domestic/order/status/view"
+		"action": "[[${BASE_PATH}]]/order/status/view"
 	}).submit();
 	
 	ProgressBar.show();
