--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/css.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/css.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css"/>
 
 <!-- custom css -->
-<link rel="stylesheet" type="text/css" th:href="@{/portal/css/basic.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/basic_popup.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.custom.css}" />
 
 <!-- link rel="stylesheet" type="text/css" th:href="@{/portal/js/jquery-ui/jquery-ui.css}" />
